src/parser/snapshots/crochet__parser__tests__jsx-5.snap
---
source: src/parser/mod.rs
expression: "parse(\"<Foo></Foo>\")"
---
Program {
    body: [
        Expr {
            span: 0..11,
            expr: JSXElement(
                JSXElement {
                    span: 0..11,
                    name: "Foo",
                    attrs: [],
                    children: [],
                },
            ),
        },
    ],
}
