src/parser/snapshots/crochet__parser__tests__jsx-6.snap
---
source: src/parser/mod.rs
expression: "parse(\"<Foo bar={baz} />\")"
---
Program {
    body: [
        Expr {
            span: 0..17,
            expr: JSXElement(
                JSXElement {
                    span: 0..17,
                    name: "Foo",
                    attrs: [
                        JSXAttr {
                            span: 5..15,
                            ident: Ident {
                                span: 5..8,
                                name: "bar",
                            },
                            value: JSXExprContainer(
                                JSXExprContainer {
                                    span: 9..15,
                                    expr: Ident(
                                        Ident {
                                            span: 10..13,
                                            name: "baz",
                                        },
                                    ),
                                },
                            ),
                        },
                    ],
                    children: [],
                },
            ),
        },
    ],
}
