src/parser/snapshots/crochet__parser__tests__jsx-7.snap
---
source: src/parser/mod.rs
expression: "parse(\"<Foo msg=\\\"hello\\\" bar={baz}></Foo>\")"
---
Program {
    body: [
        Expr {
            span: 0..33,
            expr: JSXElement(
                JSXElement {
                    span: 0..33,
                    name: "Foo",
                    attrs: [
                        JSXAttr {
                            span: 5..16,
                            ident: Ident {
                                span: 5..8,
                                name: "msg",
                            },
                            value: Lit(
                                Str(
                                    Str {
                                        span: 9..16,
                                        value: "hello",
                                    },
                                ),
                            ),
                        },
                        JSXAttr {
                            span: 17..26,
                            ident: Ident {
                                span: 17..20,
                                name: "bar",
                            },
                            value: JSXExprContainer(
                                JSXExprContainer {
                                    span: 21..26,
                                    expr: Ident(
                                        Ident {
                                            span: 22..25,
                                            name: "baz",
                                        },
                                    ),
                                },
                            ),
                        },
                    ],
                    children: [],
                },
            ),
        },
    ],
}
